character typo summary

--- a/ConsoleApplication3/ASCIIgame.csproj
+++ b/ConsoleApplication3/ASCIIgame.csproj
@@ -89,6 +89,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="TextScore.cs" />
     <Compile Include="Tools.cs" />
     <Compile Include="TypingTest.cs" />
   </ItemGroup>
